--- a/src/main/resources/co/edu/poli/aplicacion/vista/formulario2.fxml
+++ b/src/main/resources/co/edu/poli/aplicacion/vista/formulario2.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="779.0" prefWidth="1056.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.poli.aplicacion.controlador.controladorFormulario">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="850.0" prefWidth="1303.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.poli.aplicacion.controlador.controladorFormulario">
    <left>
       <VBox prefHeight="679.0" prefWidth="251.0" style="-fx-background-color: #E0E0E0;" BorderPane.alignment="CENTER">
          <children>
@@ -28,36 +28,41 @@
                   </ImageView>
                </children>
             </VBox>
-            <AnchorPane prefHeight="563.0" prefWidth="251.0" style="-fx-background-color: #0F385A;">
+            <AnchorPane prefHeight="633.0" prefWidth="251.0" style="-fx-background-color: #0F385A;">
                <children>
-                  <Button fx:id="bguardar" layoutX="38.0" layoutY="39.0" mnemonicParsing="false" onAction="#clickGuardar" prefHeight="44.0" prefWidth="178.0" style="-fx-background-color: #FFFFFF; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="GUARDAR" textFill="#0f385a">
+                  <Button fx:id="bguardar" layoutX="40.0" layoutY="11.0" mnemonicParsing="false" onAction="#clickGuardar" prefHeight="44.0" prefWidth="178.0" style="-fx-background-color: #FFFFFF; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="GUARDAR" textFill="#0f385a">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="bactualizar" layoutX="38.0" layoutY="121.0" mnemonicParsing="false" onAction="#clickActualizar" prefHeight="44.0" prefWidth="178.0" style="-fx-background-color: #FFFFFF; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="ACTUALIZAR" textFill="#0f385a">
+                  <Button fx:id="bactualizar" layoutX="40.0" layoutY="72.0" mnemonicParsing="false" onAction="#clickActualizar" prefHeight="44.0" prefWidth="178.0" style="-fx-background-color: #FFFFFF; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="ACTUALIZAR" textFill="#0f385a">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="bbuscar" layoutX="38.0" layoutY="202.0" mnemonicParsing="false" onAction="#clickBuscar" prefHeight="44.0" prefWidth="178.0" style="-fx-background-color: #FFFFFF; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="BUSCAR" textFill="#0f385a">
+                  <Button fx:id="bbuscar" layoutX="40.0" layoutY="134.0" mnemonicParsing="false" onAction="#clickBuscar" prefHeight="44.0" prefWidth="178.0" style="-fx-background-color: #FFFFFF; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="BUSCAR" textFill="#0f385a">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="beliminar" layoutX="39.0" layoutY="282.0" mnemonicParsing="false" onAction="#clickEliminar" prefHeight="44.0" prefWidth="178.0" style="-fx-background-color: #FFFFFF; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="ELIMINAR" textFill="#0f385a">
+                  <Button fx:id="beliminar" layoutX="41.0" layoutY="194.0" mnemonicParsing="false" onAction="#clickEliminar" prefHeight="44.0" prefWidth="178.0" style="-fx-background-color: #FFFFFF; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="ELIMINAR" textFill="#0f385a">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="barbolespgeo" layoutX="40.0" layoutY="363.0" mnemonicParsing="false" onAction="#clickcambiarventana1" prefHeight="44.0" prefWidth="178.0" style="-fx-background-color: #2589DA; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="ESPACIO GEOGRAFICO " textFill="WHITE">
+                  <Button fx:id="barbolespgeo" layoutX="40.0" layoutY="348.0" mnemonicParsing="false" onAction="#clickcambiarventana1" prefHeight="44.0" prefWidth="178.0" style="-fx-background-color: #2589DA; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="ESPACIO GEOGRAFICO " textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnVisaElemSeg" layoutX="40.0" layoutY="433.0" mnemonicParsing="false" onAction="#clickcambiarventana2" prefHeight="44.0" prefWidth="178.0" style="-fx-background-color: #2589DA; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="VISA Y ELEM. SEGURIDAD" textFill="WHITE">
+                  <Button fx:id="btnVisaElemSeg" layoutX="40.0" layoutY="419.0" mnemonicParsing="false" onAction="#clickcambiarventana2" prefHeight="44.0" prefWidth="178.0" style="-fx-background-color: #2589DA; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="VISA Y ELEM. SEGURIDAD" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="btnAutomata" layoutX="41.0" layoutY="486.0" mnemonicParsing="false" onAction="#clickcambiarventana2" prefHeight="44.0" prefWidth="178.0" style="-fx-background-color: #2589DA; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="AUTOMATA" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
                      </font>
                   </Button>
                </children>
@@ -77,85 +82,106 @@
                   </Label>
                </children>
             </HBox>
-            <AnchorPane prefHeight="677.0" prefWidth="805.0" style="-fx-background-color: #DDE7F0;">
+            <AnchorPane prefHeight="749.0" prefWidth="1052.0" style="-fx-background-color: #DDE7F0;">
                <children>
-                  <TextField fx:id="idPasaporte" layoutX="14.0" layoutY="53.0" onAction="#filtrarId" prefHeight="36.0" prefWidth="218.0" />
-                  <TextField fx:id="fechExp" layoutX="260.0" layoutY="53.0" prefHeight="36.0" prefWidth="233.0" />
-                  <TextField fx:id="pais" layoutX="521.0" layoutY="51.0" prefHeight="36.0" prefWidth="254.0" />
-                  <TextField fx:id="DocTitular" layoutX="14.0" layoutY="151.0" prefHeight="36.0" prefWidth="222.0" />
-                  <TextField fx:id="titular" layoutX="255.0" layoutY="151.0" prefHeight="36.0" prefWidth="238.0" />
-                  <ComboBox fx:id="tipoPas" layoutX="638.0" layoutY="93.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="26.0" prefWidth="142.0" promptText="(Seleccione una opción)" style="-fx-text-fill: #0f3805;" />
-                  <TextField fx:id="descr" layoutX="519.0" layoutY="152.0" prefHeight="34.0" prefWidth="254.0" />
-                  <Label layoutX="78.0" layoutY="25.0" text="ID Pasaporte" textFill="#0f385a">
+                  <TextField fx:id="idPasaporte" layoutX="99.0" layoutY="57.0" onAction="#filtrarId" prefHeight="36.0" prefWidth="233.0" />
+                  <TextField fx:id="fechExp" layoutX="400.0" layoutY="57.0" prefHeight="36.0" prefWidth="267.0" />
+                  <TextField fx:id="pais" layoutX="740.0" layoutY="54.0" prefHeight="36.0" prefWidth="262.0" />
+                  <TextField fx:id="DocTitular" layoutX="98.0" layoutY="155.0" prefHeight="36.0" prefWidth="238.0" />
+                  <TextField fx:id="titular" layoutX="402.0" layoutY="155.0" prefHeight="36.0" prefWidth="263.0" />
+                  <ComboBox fx:id="tipoPas" layoutX="865.0" layoutY="96.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="26.0" prefWidth="142.0" promptText="(Seleccione una opción)" style="-fx-text-fill: #0f3805;" />
+                  <TextField fx:id="descr" layoutX="739.0" layoutY="155.0" prefHeight="34.0" prefWidth="261.0" />
+                  <Label layoutX="171.0" layoutY="29.0" text="ID Pasaporte" textFill="#0f385a">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Label layoutX="58.0" layoutY="123.0" text="Documento Titular" textFill="#0f385a">
+                  <Label layoutX="151.0" layoutY="127.0" text="Documento Titular" textFill="#0f385a">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Label layoutX="304.0" layoutY="25.0" text="Fecha De Expedición" textFill="#0f385a">
+                  <Label layoutX="460.0" layoutY="29.0" text="Fecha De Expedición" textFill="#0f385a">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Label layoutX="629.0" layoutY="25.0" text="Pais" textFill="#0f385a">
+                  <Label layoutX="856.0" layoutY="28.0" text="Pais" textFill="#0f385a">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Label layoutX="520.0" layoutY="96.0" text="Tipo De Pasaporte" textFill="#0f385a">
+                  <Label layoutX="747.0" layoutY="99.0" text="Tipo De Pasaporte" textFill="#0f385a">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <Label layoutX="519.0" layoutY="123.0" text="Descripción" textFill="#0f385a">
+                  <Label layoutX="746.0" layoutY="126.0" text="Descripción" textFill="#0f385a">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Pane layoutX="45.0" layoutY="227.0" prefHeight="132.0" prefWidth="278.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 15;">
+                  <Pane layoutX="73.0" layoutY="227.0" prefHeight="170.0" prefWidth="728.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 15;">
                      <children>
-                        <Button fx:id="btnsuscribir" layoutX="169.0" layoutY="15.0" mnemonicParsing="false" onAction="#clickSuscribir" prefHeight="13.0" prefWidth="92.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Suscribir" textFill="WHITE">
+                        <Button fx:id="btnsuscribir" layoutX="450.0" layoutY="34.0" mnemonicParsing="false" onAction="#clickSuscribir" prefHeight="13.0" prefWidth="92.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Suscribir" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="13.0" />
                            </font>
                         </Button>
-                        <Button fx:id="btneliminarsusc" layoutX="169.0" layoutY="53.0" mnemonicParsing="false" onAction="#clickEliminarSuscripcion" prefHeight="13.0" prefWidth="92.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Eliminar" textFill="WHITE">
+                        <Button fx:id="btneliminarsusc" layoutX="450.0" layoutY="72.0" mnemonicParsing="false" onAction="#clickEliminarSuscripcion" prefHeight="13.0" prefWidth="92.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Eliminar" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="13.0" />
                            </font>
                         </Button>
-                        <CheckBox fx:id="selectCancilleria" layoutX="18.0" layoutY="36.0" mnemonicParsing="false" text="Cancilleria " />
-                        <CheckBox fx:id="selectpolicia" layoutX="18.0" layoutY="66.0" mnemonicParsing="false" text="Policia" />
-                        <CheckBox fx:id="selectmigra" layoutX="18.0" layoutY="93.0" mnemonicParsing="false" text="Migración Colombia" />
-                        <Label layoutX="18.0" layoutY="7.0" prefHeight="22.0" prefWidth="116.0" text="Notificación" textFill="#0f385a">
+                        <CheckBox fx:id="selectCancilleria" layoutX="18.0" layoutY="49.0" mnemonicParsing="false" text="Cancilleria " />
+                        <CheckBox fx:id="selectpolicia" layoutX="18.0" layoutY="79.0" mnemonicParsing="false" text="Policia" />
+                        <CheckBox fx:id="selectmigra" layoutX="18.0" layoutY="106.0" mnemonicParsing="false" text="Migración Colombia" />
+                        <Label layoutX="18.0" layoutY="20.0" prefHeight="22.0" prefWidth="116.0" text="Notificación" textFill="#0f385a">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
                         </Label>
-                        <Button fx:id="btnverlista" layoutX="169.0" layoutY="88.0" mnemonicParsing="false" onAction="#clickverlistasuscriptores" prefHeight="13.0" prefWidth="92.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Lista" textFill="WHITE">
+                        <Button fx:id="btnverlista" layoutX="450.0" layoutY="107.0" mnemonicParsing="false" onAction="#clickverlistasuscriptores" prefHeight="13.0" prefWidth="92.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Lista" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Button>
+                        <TextArea fx:id="mensajeMediator" layoutX="176.0" layoutY="48.0" prefHeight="89.0" prefWidth="246.0" />
+                        <Label layoutX="176.0" layoutY="20.0" prefHeight="22.0" prefWidth="116.0" text="Mensaje " textFill="#0f385a">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="btnenviarcancilleria" layoutX="571.0" layoutY="36.0" mnemonicParsing="false" onAction="#clickEnviarCancilleria" prefHeight="27.0" prefWidth="124.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Enviar Cancilleria" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="btnenviarpolicia" layoutX="570.0" layoutY="74.0" mnemonicParsing="false" onAction="#clickEnviarPolicia" prefHeight="27.0" prefWidth="126.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Enviar Policia" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="btnenviarmigracion" layoutX="569.0" layoutY="109.0" mnemonicParsing="false" onAction="#clickEnviarMigracion" prefHeight="27.0" prefWidth="127.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Enviar Migración" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="13.0" />
                            </font>
                         </Button>
                      </children>
                   </Pane>
-                  <ComboBox fx:id="estados" layoutX="363.0" layoutY="265.0" prefHeight="33.0" prefWidth="146.0" />
-                  <Label layoutX="363.0" layoutY="227.0" text="Estados" textFill="#0f385a">
+                  <ComboBox fx:id="estados" layoutX="854.0" layoutY="271.0" prefHeight="33.0" prefWidth="146.0" />
+                  <Label layoutX="891.0" layoutY="230.0" text="Estados" textFill="#0f385a">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <TextArea fx:id="textAreaMementos" editable="false" layoutX="45.0" layoutY="378.0" prefHeight="264.0" prefWidth="694.0" />
-                  <Button fx:id="btnRestaurar1" layoutX="565.0" layoutY="263.0" maxHeight="-Infinity" mnemonicParsing="false" onAction="#clickRestaurar" prefHeight="37.0" prefWidth="127.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Restaurar" textFill="WHITE">
+                  <TextArea fx:id="textAreaMementos" editable="false" layoutX="62.0" layoutY="430.0" prefHeight="279.0" prefWidth="924.0" />
+                  <Button fx:id="btnRestaurar1" layoutX="864.0" layoutY="328.0" maxHeight="-Infinity" mnemonicParsing="false" onAction="#clickRestaurar" prefHeight="16.0" prefWidth="127.0" style="-fx-background-color: #0F385A; -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.6), 15, 0, -2, 2); -fx-background-radius: 15;" text="Restaurar" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Button>
-                  <Label layoutX="322.0" layoutY="123.0" text="Nombre Titular" textFill="#0f385a">
+                  <Label layoutX="478.0" layoutY="127.0" text="Nombre Titular" textFill="#0f385a">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
